--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
 body {
-    height: 100vh;
-    display: flex;
-    align-items: center;
     background: linear-gradient(to top left, #e1e4e3, #484b48);
 }
 
-h1 {
+main {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+nav {
+    position: fixed;
+    bottom: 0;
+}
+
+h1,
+p {
     font-family: sans-serif;
     font-size: 50px;
     line-height: 1.3;
@@ -13,4 +22,21 @@ h1 {
     padding: 30px;
     text-align: center;
     color: white;
+}
+
+a {
+    display: block;
+    padding: 8px;
+    color: white;
+    text-decoration: none;
+}
+
+li {
+    float: left;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
